k8s/pi-hole/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pi-hole
  name: pi-hole
  namespace: pi-hole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-hole
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: pi-hole
      labels:
        app: pi-hole
    spec:
      nodeSelector:
        kubernetes.io/hostname: oliver
      containers:
        - image: docker.io/pihole/pihole:latest
          name: pi-hole
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /admin/login
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_NICE
          volumeMounts:
            - name: pi-hole
              mountPath: /etc/pihole
      volumes:
        - name: pi-hole
          persistentVolumeClaim:
            claimName: pi-hole-longhorn
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
  namespace: pi-hole
spec:
  selector:
    app: pi-hole
  type: ClusterIP
  ports:
    - name: pi-hole-80
      port: 80
      targetPort: 80
    - name: pi-hole-53-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: pi-hole-53-tcp
      port: 53
      targetPort: 53
---
